--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
-
 <!DOCTYPE html>
 <html lang="vi">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>DVC IPA</title>
-<style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>DVC IPA</title>
+    <style>
         body {
             font-family: Arial, sans-serif;
             margin: 0;
@@ -91,7 +90,8 @@ color: #FFFFFF;
         }
 
     </style>
-<script type="2383ff0a5f479183bd379872-text/javascript">
+
+<script>
         function showDateTime() {
             const now = new Date();
             const dateTimeString = now.toLocaleString('vi-VN');
@@ -99,38 +99,57 @@ color: #FFFFFF;
         }
         window.onload = showDateTime;
     </script>
+
 </head>
 <body>
-<div class="profile-container">
-<div class="profile-header">
-<h1>DVC IPA </h1>
-</div>
-<div class="profile-content">
-<img src="https://thinhkk019.github.io/thinhkk/DVC.png" alt="Ảnh đại diện">
-<h2>Link lấy key Kitty Keep</h2>
+
+    <div class="profile-container">
+        <div class="profile-header">
+            <h1>DVC IPA </h1>
+        </div>
+        <div class="profile-content">
+            <img src="https://thinhkk019.github.io/thinhkk/DVC.png" alt="Ảnh đại diện">
+            <h2>Link lấy key Kitty Keep</h2>
+
 <p id="dateTime"></p>
-<center><div id="Monday" class="day-content"> <p class="button">
+
+  <center><div id="Monday" class="day-content"> <p class="button">
 <a href="https://8link.vip/VprZ5Hm3W" title="thuhai">Click vào đây để tiếp tục…</a>
+
 </p> </div>
-<div id="Tuesday" class="day-content"> <p class="button">
-<a href="https://8link.vip/uxI2WCbE3" title="thuba">Click vào đây để tiếp tục…</a>
+    <div id="Tuesday" class="day-content"> <p class="button">
+
+<a href="https://8link.vip/uxI2WCbE3" title="thuba">Click vào đây để tiếp tục…</a> 
+
 </p> </div>
-<div id="Wednesday" class="day-content"> <p class="button">
-<a href="https://8link.vip/r3m1RVXwI" title="thutu">Click vào đây để tiếp tục…</a>
+    <div id="Wednesday" class="day-content"> <p class="button">
+
+<a href="https://8link.vip/r3m1RVXwI" title="thutu">Click vào đây để tiếp tục…</a> 
+
+
 </p> </div>
-<div id="Thursday" class="day-content"> <p class="button">
+    <div id="Thursday" class="day-content"> <p class="button">
+
 <a href="https://8link.vip/496Gfdkl3" title="thunam">Click vào đây để tiếp tục…</a>
-</p> </div>
-<div id="Friday" class="day-content"> <p class="button">
+
+ </p> </div>
+    <div id="Friday" class="day-content"> <p class="button">
+
 <a href="https://8link.vip/y7rdVeWTw" title="thusau">Click vào đây để tiếp tục…</a>
-</p> </div>
-<div id="Saturday" class="day-content"> <p class="button">
+
+ </p> </div>
+    <div id="Saturday" class="day-content"> <p class="button">
+
 <a href="https://8link.vip/tqjS1j4kd" title="thubay">Click vào đây để tiếp tục…</a>
-</p> </div>
-<div id="Sunday" class="day-content"> <p class="button">
+
+ </p>   </div>
+    <div id="Sunday" class="day-content"> <p class="button">
+
 <a href="https://8link.vip/oSCzTOp5E" title="chunhat">Click vào đây để tiếp tục…</a>
-</p> </div> </center>
-<script type="2383ff0a5f479183bd379872-text/javascript">
+
+ </p> </div> </center>
+
+   <script>
         // Tạo một mảng các ngày trong tuần
         const daysOfWeek = [
             "Sunday", "Monday", "Tuesday", "Wednesday", "Thursday", "Friday", "Saturday"
@@ -146,12 +165,13 @@ color: #FFFFFF;
         // Hiển thị nội dung của ngày hiện tại
         document.getElementById(today).style.display = 'block';
     </script>
-<div class="profile-social">
-<a href="https://t.me/dvcipaios" title="KhoGame"> Kho game </a>
-<a href="https://t.me/dvcipafree" title="NhomChat">Nhóm Chat</a>
-</div>
-</div>
-</div>
-<script src="/cdn-cgi/scripts/7d0fa10a/cloudflare-static/rocket-loader.min.js" data-cf-settings="2383ff0a5f479183bd379872-|49" defer></script><script defer src="https://static.cloudflareinsights.com/beacon.min.js/vcd15cbe7772f49c399c6a5babf22c1241717689176015" integrity="sha512-ZpsOmlRQV6y907TI0dKBHq9Md29nnaEIPlkf84rnaERnq6zvWvPUqr2ft8M1aS28oN72PdrCzSjY4U6VaAw1EQ==" data-cf-beacon='{"rayId":"8d2d5cd16e95515c","version":"2024.10.1","r":1,"token":"3390d74ad9ec4ece9371cea891cacaff","serverTiming":{"name":{"cfExtPri":true,"cfL4":true,"cfSpeedBrain":true,"cfCacheStatus":true}}}' crossorigin="anonymous"></script>
+            <div class="profile-social">
+                <a href="https://t.me/dvcipaios" title="KhoGame"> Kho game </a>
+               
+                <a href="https://t.me/dvcipafree" title="NhomChat">Nhóm Chat</a>
+            </div>
+        </div>
+    </div>
+
 </body>
 </html>
